[project]
name = "overcast-data"
readme = "README.md"
authors = [{name = "Joshua Peek"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.pyright]

[tool.vulture]
exclude = ["*test_*.py"]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
