[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "overcast-data"
version = "0.0.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "beautifulsoup4>=4.11,<5",
    "click>=8.1.1,<9",
    "cryptography>=42,<47",
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.2/lru_cache-1.0.2-py3-none-any.whl",
    "lxml>=6,<7",
    "mutagen>=1.47,<2",
    "prometheus-client>=0.20",
    "python-dateutil>=2.8,<3",
    "requests>=2.32,<3",
]
scripts.overcast-data = "overcast_data:cli.cli"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "pytest>=8,<10",
    "ruff>=0.9,<2",
    "types-beautifulsoup4>=4.11,<5",
    "types-python-dateutil>=2.8,<3",
    "types-requests>=2.32,<3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true

[tool.pyright]

[tool.vulture]
exclude = [ "*test_*.py" ]
